--- a/docs/docs/llms/index.mdx
+++ b/docs/docs/llms/index.mdx
@@ -179,7 +179,8 @@ MLflow's LLM Evaluation is designed to simplify the evaluation process, offering
 <details>
   <summary>Key Benefit of MLflow LLM Evaluation</summary>
 
-  - **Simplified Evaluation**: Leverage MLflow's <APILink fn="mlflow.evaluate" /> API and built-in harnesses to test your GenAI models with ease.
+  {/* TODO: make the mlflow.genai.evaluate link functional */}
+  - **Simplified Evaluation**: Leverage MLflow's <APILink fn="mlflow.genai.evaluate" /> API and built-in harnesses to test your GenAI models with ease.
 
   - **LLM-as-a-Judge**: MLflow provides built-in LLM-as-a-Judge metrics with flexible configuration for judge LLM providers, allowing you to plug-in complex evaluation criteria into automated evaluation process and to evaluate in bulk.
 
