--- a/docs/docs/llms/llm-evaluate/notebooks/huggingface-evaluation.ipynb
+++ b/docs/docs/llms/llm-evaluate/notebooks/huggingface-evaluation.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluate a Hugging Face LLM with `mlflow.evaluate()`\n",
+    "# Evaluate a Hugging Face LLM with `mlflow.genai.evaluate()`\n",
     "\n",
-    "This guide will show how to load a pre-trained Hugging Face pipeline, log it to MLflow, and use `mlflow.evaluate()` to evaluate builtin metrics as well as custom LLM-judged metrics for the model.\n",
+    "This guide will show how to load a pre-trained Hugging Face pipeline, log it to MLflow, and use `mlflow.genai.evaluate()` to evaluate builtin metrics as well as custom LLM-judged metrics for the model.\n",
     "\n",
     "For detailed information, please read the documentation on [using MLflow evaluate](https://mlflow.org/docs/latest/llms/llm-evaluate/index.html)."
    ]
@@ -579,15 +579,13 @@
     }
    ],
    "source": [
+    "from mlflow.genai.scorers import correctness\n",
+    "\n",
     "with mlflow.start_run():\n",
-    "    results = mlflow.evaluate(\n",
-    "        model_info.model_uri,\n",
-    "        eval_df.head(10),\n",
-    "        evaluators=\"default\",\n",
-    "        model_type=\"text\",\n",
-    "        targets=\"output\",\n",
-    "        extra_metrics=[answer_correctness_metric, answer_quality_metric],\n",
-    "        evaluator_config={\"col_mapping\": {\"inputs\": \"instruction\"}},\n",
+    "    results = mlflow.genai.evaluate(\n",
+    "        predict_fn=mlflow.genai.to_predict_fn(model_info.model_uri),\n",
+    "        data=eval_df.head(10),\n",
+    "        scorers=[correctness(), answer_quality_metric],\n",
     "    )"
    ]
   },
@@ -983,7 +981,7 @@
     }
    ],
    "source": [
-    "results.tables[\"eval_results_table\"]"
+    "results.result_df"
    ]
   },
   {
