--- a/docs/docs/llms/llm-evaluate/notebooks/question-answering-evaluation.ipynb
+++ b/docs/docs/llms/llm-evaluate/notebooks/question-answering-evaluation.ipynb
@@ -45,7 +45,8 @@
     "import openai\n",
     "import pandas as pd\n",
     "\n",
-    "import mlflow"
+    "import mlflow\n",
+    "from mlflow.genai.scorers import correctness"
    ]
   },
   {
@@ -75,7 +76,7 @@
     }
    },
    "source": [
-    "Create a test case of `inputs` that will be passed into the model and `ground_truth` which will be used to compare against the generated output from the model."
+    "Create a test case of `inputs` that will be passed into the model and `expectations` which will be used to compare against the generated output from the model."
    ]
   },
   {
@@ -103,7 +104,7 @@
     "            \"What does the 'finally' block in Python do?\",\n",
     "            \"What is the difference between multiprocessing and multithreading?\",\n",
     "        ],\n",
-    "        \"ground_truth\": [\n",
+    "        \"expectations\": [\n",
     "            \"The useEffect() hook tells React that your component needs to do something after render. React will remember the function you passed (we’ll refer to it as our “effect”), and call it later after performing the DOM updates.\",\n",
     "            \"Static members belongs to the class, rather than a specific instance. This means that only one instance of a static member exists, even if you create multiple objects of the class, or if you don't create any. It will be shared by all objects.\",\n",
     "            \"'Finally' defines a block of code to run when the try... except...else block is final. The finally block will be executed no matter if the try block raises an error or not.\",\n",
@@ -125,7 +126,7 @@
     }
    },
    "source": [
-    "Create a simple OpenAI model that asks gpt-4o to answer the question in two sentences. Call `mlflow.evaluate()` with the model and evaluation dataframe. "
+    "Create a simple OpenAI model that asks gpt-4o to answer the question in two sentences. Call `mlflow.genai.evaluate()` with the model and evaluation dataframe. "
    ]
   },
   {
@@ -191,12 +192,10 @@
     "            {\"role\": \"user\", \"content\": \"{question}\"},\n",
     "        ],\n",
     "    )\n",
-    "    results = mlflow.evaluate(\n",
-    "        basic_qa_model.model_uri,\n",
-    "        eval_df,\n",
-    "        targets=\"ground_truth\",  # specify which column corresponds to the expected output\n",
-    "        model_type=\"question-answering\",  # model type indicates which metrics are relevant for this task\n",
-    "        evaluators=\"default\",\n",
+    "    results = mlflow.genai.evaluate(\n",
+    "        predict_fn=mlflow.genai.to_predict_fn(basic_qa_model.model_uri),\n",
+    "        data=eval_df,\n",
+    "        scorers=[correctness()],\n",
     "    )\n",
     "results.metrics"
    ]
@@ -359,7 +358,7 @@
     }
    ],
    "source": [
-    "results.tables[\"eval_results_table\"]"
+    "results.result_df"
    ]
   },
   {
@@ -510,7 +509,7 @@
     }
    },
    "source": [
-    "Call `mlflow.evaluate()` again but with your new `answer_similarity_metric`"
+    "Call `mlflow.genai.evaluate()` again but with your new `answer_similarity_metric`"
    ]
   },
   {
@@ -569,13 +568,10 @@
    ],
    "source": [
     "with mlflow.start_run() as run:\n",
-    "    results = mlflow.evaluate(\n",
-    "        basic_qa_model.model_uri,\n",
-    "        eval_df,\n",
-    "        targets=\"ground_truth\",\n",
-    "        model_type=\"question-answering\",\n",
-    "        evaluators=\"default\",\n",
-    "        extra_metrics=[answer_similarity_metric],  # use the answer similarity metric created above\n",
+    "    results = mlflow.genai.evaluate(\n",
+    "        predict_fn=mlflow.genai.to_predict_fn(basic_qa_model.model_uri),\n",
+    "        data=eval_df,\n",
+    "        scorers=[answer_similarity_metric],  # use the answer similarity metric created above\n",
     "    )\n",
     "results.metrics"
    ]
@@ -754,7 +750,7 @@
     }
    ],
    "source": [
-    "results.tables[\"eval_results_table\"]"
+    "results.result_df"
    ]
   },
   {
@@ -907,7 +903,7 @@
     }
    },
    "source": [
-    "Call `mlflow.evaluate` with your new professionalism metric. "
+    "Call `mlflow.genai.evaluate` with your new professionalism metric. "
    ]
   },
   {
@@ -950,12 +946,10 @@
    ],
    "source": [
     "with mlflow.start_run() as run:\n",
-    "    results = mlflow.evaluate(\n",
-    "        basic_qa_model.model_uri,\n",
-    "        eval_df,\n",
-    "        model_type=\"question-answering\",\n",
-    "        evaluators=\"default\",\n",
-    "        extra_metrics=[professionalism_metric],  # use the professionalism metric we created above\n",
+    "    results = mlflow.genai.evaluate(\n",
+    "        predict_fn=mlflow.genai.to_predict_fn(basic_qa_model.model_uri),\n",
+    "        data=eval_df,\n",
+    "        scorers=[professionalism_metric],  # use the professionalism metric we created above\n",
     "    )\n",
     "print(results.metrics)"
    ]
@@ -1119,7 +1113,7 @@
     }
    ],
    "source": [
-    "results.tables[\"eval_results_table\"]"
+    "results.result_df"
    ]
   },
   {
@@ -1149,7 +1143,7 @@
     }
    },
    "source": [
-    "Call `mlflow.evaluate()` using the new model. Observe that the professionalism score has increased!"
+    "Call `mlflow.genai.evaluate()` using the new model. Observe that the professionalism score has increased!"
    ]
   },
   {
@@ -1206,12 +1200,10 @@
     "            {\"role\": \"user\", \"content\": \"{question}\"},\n",
     "        ],\n",
     "    )\n",
-    "    results = mlflow.evaluate(\n",
-    "        professional_qa_model.model_uri,\n",
-    "        eval_df,\n",
-    "        model_type=\"question-answering\",\n",
-    "        evaluators=\"default\",\n",
-    "        extra_metrics=[professionalism_metric],\n",
+    "    results = mlflow.genai.evaluate(\n",
+    "        predict_fn=mlflow.genai.to_predict_fn(professional_qa_model.model_uri),\n",
+    "        data=eval_df,\n",
+    "        scorers=[professionalism_metric],\n",
     "    )\n",
     "print(results.metrics)"
    ]
@@ -1375,7 +1367,7 @@
     }
    ],
    "source": [
-    "results.tables[\"eval_results_table\"]"
+    "results.result_df"
    ]
   }
  ],
