--- a/docs/docs/llms/rag/notebooks/retriever-evaluation-tutorial.ipynb
+++ b/docs/docs/llms/rag/notebooks/retriever-evaluation-tutorial.ipynb
@@ -21,11 +21,11 @@
    "source": [
     "In MLflow 2.8.0, we introduced a new model type \"retriever\" to the `mlflow.evaluate()` API. It helps you to evaluate the retriever in a RAG application. It contains two built-in metrics `precision_at_k` and `recall_at_k`. In MLflow 2.9.0, `ndcg_at_k` is available.\n",
     "\n",
-    "This notebook illustrates how to use `mlflow.evaluate()` to evaluate the retriever in a RAG application. It has the following steps:\n",
+    "This notebook illustrates how to use the MLflow 3.0 `mlflow.genai.evaluate()` API to evaluate the retriever in a RAG application. It has the following steps:\n",
     "\n",
     "* Step 1: Install and Load Packages\n",
     "* Step 2: Evaluation Dataset Preparation\n",
-    "* Step 3: Calling `mlflow.evaluate()`\n",
+    "* Step 3: Calling `mlflow.genai.evaluate()`\n",
     "* Step 4: Result Analysis and Visualization"
    ]
   },
@@ -166,7 +166,7 @@
    "source": [
     "data = pd.DataFrame(\n",
     "    {\n",
-    "        \"questions\": [\n",
+    "        \"inputs\": [\n",
     "            \"What is MLflow?\",\n",
     "            \"What is Databricks?\",\n",
     "            \"How to serve a model on Databricks?\",\n",
@@ -187,15 +187,17 @@
     "            ],\n",
     "            [],\n",
     "        ],\n",
-    "        \"ground_truth_context\": [\n",
-    "            [\"mlflow/index.html\"],\n",
-    "            [\"introduction/index.html\"],\n",
-    "            [\n",
-    "                \"machine-learning/model-serving/index.html\",\n",
-    "                \"machine-learning/model-serving/llm-optimized-model-serving.html\",\n",
+    "        \"expectations\": {\n",
+    "            \"expected_retrieved_context\": [\n",
+    "                [\"mlflow/index.html\"],\n",
+    "                [\"introduction/index.html\"],\n",
+    "                [\n",
+    "                    \"machine-learning/model-serving/index.html\",\n",
+    "                    \"machine-learning/model-serving/llm-optimized-model-serving.html\",\n",
+    "                ],\n",
+    "                [\"mlflow/databricks-autologging.html\"],\n",
     "            ],\n",
-    "            [\"mlflow/databricks-autologging.html\"],\n",
-    "        ],\n",
+    "        },\n",
     "    }\n",
     ")"
    ]
@@ -433,7 +435,7 @@
    "source": [
     "# Prepare dataframe `data` with the required format\n",
     "data = pd.DataFrame({})\n",
-    "data[\"question\"] = generated_df[\"question\"].copy(deep=True)\n",
+    "data[\"inputs\"] = generated_df[\"question\"].copy(deep=True)\n",
     "data[\"source\"] = generated_df[\"source\"].apply(lambda x: [x])\n",
     "data.head(3)"
    ]
@@ -840,7 +842,7 @@
     }
    },
    "source": [
-    "## Step 3: Calling `mlflow.evaluate()`"
+    "## Step 3: Calling `mlflow.genai.evaluate()`"
    ]
   },
   {
@@ -884,7 +886,7 @@
     }
    },
    "source": [
-    "### Basic usage\n",
+    "### Basic usage (MLflow 2.X)\n",
     "\n",
     "There are two supported ways to specify the retriever's output:\n",
     "\n",
@@ -1180,12 +1182,9 @@
    ],
    "source": [
     "with mlflow.start_run() as run:\n",
-    "    evaluate_results = mlflow.evaluate(\n",
+    "    evaluate_results = mlflow.genai.evaluate(\n",
     "        data=data,\n",
-    "        targets=\"source\",\n",
-    "        predictions=\"retrieved_doc_ids\",\n",
-    "        evaluators=\"default\",\n",
-    "        extra_metrics=[\n",
+    "        scorers=[\n",
     "            mlflow.metrics.precision_at_k(1),\n",
     "            mlflow.metrics.precision_at_k(2),\n",
     "            mlflow.metrics.precision_at_k(3),\n",
@@ -1541,7 +1540,7 @@
     }
    ],
    "source": [
-    "eval_results_table = evaluate_results.tables[\"eval_results_table\"]\n",
+    "eval_results_table = evaluate_results.result_df\n",
     "eval_results_table.head(5)"
    ]
   },
