--- a/docs/docs/llms/langchain/index.mdx
+++ b/docs/docs/llms/langchain/index.mdx
@@ -403,17 +403,17 @@ agent.invoke(query)
 
 ### How can I evaluate a LangGraph Agent?
 
-The [mlflow.evaluate](https://mlflow.org/docs/latest/model-evaluation/index.html) function provides
+The [mlflow.genai.evaluate](https://mlflow.org/docs/latest/model-evaluation/index.html) function provides
 a robust way to evaluate model performance.
 
 LangGraph agents, especially those with chat functionality, can return multiple messages in one
-inference call. Given `mlflow.evaluate` performs naive comparisons between raw predictions and a specified
+inference call. Given `mlflow.genai.evaluate` performs naive comparisons between raw predictions and a specified
 ground truth value, it is the user's responsibility to reconcile potential differences prediction output
 and ground truth.
 
 Often, the best approach is to use a [custom function](https://mlflow.org/docs/latest/llms/llm-evaluate/index.html#evaluating-with-a-custom-function)
 to process the response. Below we provide an example of a custom function that extracts the last chat
-message from a LangGraph model. This function is then used in mlflow.evaluate to return a single
+message from a LangGraph model. This function is then used in mlflow.genai.evaluate to return a single
 string response, which can be compared to the `"ground_truth"` column.
 
 ```python
@@ -432,7 +432,7 @@ eval_data = pd.DataFrame(
             "What is MLflow?",
             "What is Spark?",
         ],
-        "ground_truth": [
+        "expectations": [
             "MLflow is an open-source platform for managing the end-to-end machine learning (ML) lifecycle. It was developed by Databricks, a company that specializes in big data and machine learning solutions. MLflow is designed to address the challenges that data scientists and machine learning engineers face when developing, training, and deploying machine learning models.",
             "Apache Spark is an open-source, distributed computing system designed for big data processing and analytics. It was developed in response to limitations of the Hadoop MapReduce computing model, offering improvements in speed and ease of use. Spark provides libraries for various tasks such as data ingestion, processing, and analysis through its components like Spark SQL for structured data, Spark Streaming for real-time data processing, and MLlib for machine learning tasks",
         ],
@@ -454,12 +454,10 @@ def custom_langgraph_wrapper(inputs: pd.DataFrame) -> List[str]:
 
 
 with mlflow.start_run() as run:
-    results = mlflow.evaluate(
-        custom_langgraph_wrapper,  # Pass our function defined above
+    results = mlflow.genai.evaluate(
+        predict_fn=custom_langgraph_wrapper,  # Pass our function defined above
         data=eval_data,
-        targets="ground_truth",
-        model_type="question-answering",
-        extra_metrics=[
+        scorers=[
             mlflow.metrics.latency(),
             mlflow.metrics.genai.answer_correctness("openai:/gpt-4o"),
         ],
