--- a/docs/docs/llms/llm-evaluate/notebooks/rag-evaluation.ipynb
+++ b/docs/docs/llms/llm-evaluate/notebooks/rag-evaluation.ipynb
@@ -148,7 +148,7 @@
     }
    },
    "source": [
-    "## Evaluate the RAG system using `mlflow.evaluate()`"
+    "## Evaluate the RAG system using `mlflow.genai.evaluate()`"
    ]
   },
   {
@@ -227,7 +227,7 @@
     "    {\n",
     "        \"questions\": [\n",
     "            \"What is MLflow?\",\n",
-    "            \"How to run mlflow.evaluate()?\",\n",
+    "            \"How to run mlflow.genai.evaluate()?\",\n",
     "            \"How to log_table()?\",\n",
     "            \"How to load_table()?\",\n",
     "        ],\n",
@@ -581,19 +581,10 @@
     }
    ],
    "source": [
-    "results = mlflow.evaluate(\n",
-    "    model,\n",
-    "    eval_df,\n",
-    "    model_type=\"question-answering\",\n",
-    "    evaluators=\"default\",\n",
-    "    predictions=\"result\",\n",
-    "    extra_metrics=[faithfulness_metric, relevance_metric, mlflow.metrics.latency()],\n",
-    "    evaluator_config={\n",
-    "        \"col_mapping\": {\n",
-    "            \"inputs\": \"questions\",\n",
-    "            \"context\": \"source_documents\",\n",
-    "        }\n",
-    "    },\n",
+    "results = mlflow.genai.evaluate(\n",
+    "    predict_fn=mlflow.genai.to_predict_fn(model),\n",
+    "    data=eval_df,\n",
+    "    scorers=[faithfulness_metric, relevance_metric, mlflow.metrics.latency()],\n",
     ")\n",
     "print(results.metrics)"
    ]
@@ -775,7 +766,7 @@
     }
    ],
    "source": [
-    "results.tables[\"eval_results_table\"]"
+    "results.result_df"
    ]
   }
  ],
